# django-bootstrap3

./: .editorconfig  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AGENTS.md  AUTHORS  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  DIEGOHJJACOBO  FUNDING.yml  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  fabfile.py  justfile  manage.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  testsettings.py  tox.ini
.github/: dependabot.yml  stale.yml
.github/workflows/: ci.yml  codeql.yml  dependabot-auto-approve-and-merge.yml  dependabot-auto-approve.yml  dependabot-auto-merge.yml  release.yml  test.yml
bootstrap3/: __init__.py  bootstrap.py  components.py  exceptions.py  forms.py  html.py  icons.py  layout.py  legacy.py  models.py  renderers.py  settings.py  templates.py  tests.py  text.py  utils.py
bootstrap3/templates/bootstrap3/: bootstrap3.html  field_errors.html  field_help_text_and_errors.html  form_errors.html  messages.html  pagination.html  tabs.html
bootstrap3/templatetags/: bootstrap3.py
demo/demo/: forms.py  settings.py  urls.py  views.py  wsgi.py
demo/demo/templates/demo/: base.html  bootstrap.html  form.html  form_by_field.html  form_horizontal.html  form_inline.html  form_layout.html  form_with_files.html  formset.html  formset_tabular.html  home.html  misc.html  modal.html  pagination.html
django_bootstrap3/: __init__.py  bootstrap3.sqlite
django_bootstrap3/bootstrap3/: forms.py  settings.py  templates.py  utils.py
django_bootstrap3/bootstrap3/templates/bootstrap3/: bootstrap3.html
django_bootstrap3/bootstrap3/templatetags/: bootstrap3.py
django_bootstrap3/demo/: forms.py  settings.py  urls.py  views.py
django_bootstrap3/demo/templates/demo/: base.html  form.html  form_horizontal.html  form_inline.html
docs/: conf.py  example_template.rst  index.rst  installation.rst  layout.rst  quickstart.rst  requirements.txt  settings.rst  settingsoptions.rst  templates.rst  templatetags.rst  usage.rst
example/: kmanage.py  settings.py
example/app/: forms.py  settings.py  urls.py  views.py  wsgi.py
example/app/templates/app/: base.html  form.html  form_by_field.html  form_horizontal.html  form_inline.html  form_with_files.html  formset.html  home.html  misc.html  pagination.html
src/bootstrap3/: __about__.py  __init__.py  components.py  forms.py  renderers.py  utils.py
src/bootstrap3/templatetags/: bootstrap3.py
tests/: smoke_test.py  test_settings.py  test_templates.py  test_templatetags.py  test_version.py  utils.py
tests/app/: forms.py  settings.py
