[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.9.6,<0.10.0"]

[project]
authors = [
  {name = "Dylan Verheul", email = "dylan@dyve.net"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 4.2",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities",
]
dependencies = ["Django>=4.2"]
description = "Bootstrap 3 for Django"
keywords = ["django", "bootstrap", "bootstrap3"]
license = "BSD-3-Clause"
license-files = ["LICENSE", "AUTHORS"]
name = "django-bootstrap3"
readme = "README.md"
requires-python = ">=3.10"
version = "26.1"

[project.urls]
Changelog = "https://github.com/zostera/django-bootstrap3/blob/main/CHANGELOG.md"
Documentation = "https://django-bootstrap3.readthedocs.io/"
Homepage = "https://github.com/zostera/django-bootstrap3"
Issues = "https://github.com/zostera/django-bootstrap3/issues"
Source = "https://github.com/zostera/django-bootstrap3"

[tool.ruff]
fix = false
line-length = 120
src = ["src"]

[tool.ruff.lint]
fixable = [
  "I001", # isort (sorting)
  "F", # flake8
  "D", # docformatter
  "UP", # pyupgrade
]
ignore = [
  "D1", # D1: Missing docstring error codes (because not every function and class has a docstring)
  "D203", # D203: 1 blank line required before class docstring (conflicts with D211 and should be disabled, see https://github.com/PyCQA/pydocstyle/pull/91)
  "D212", # D212: Multi-line docstring summary should start at the first line
  "D301", # D301: Use r”“” if any backslashes in a docstring (unclear how else to handle backslashes in docstrings)
]
select = [
  "D", # pydocstyle
  "E", # pycodestyle
  "F", # flake8
  "I", # isort
  "UP", # pyupgrade
]
unfixable = [
  "F8", # names in flake8, such as defined but unused variables
]

[tool.ruff.lint.isort]
known-first-party = ["bootstrap3", "app"]
known-third-party = ["django"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.paths]
package = ["src/bootstrap3", "*/django_bootstrap3/src/bootstrap3"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[dependency-groups]
dev = [
  {include-group = "test"},
  {include-group = "docs"},
]
docs = [
  "furo>=2024.8.6",
  "myst-parser>=3.0.1",
  "sphinx>=7.1.2",
]
test = [
  "coverage[toml]>=7.6.1",
]

[tool.uv.build-backend]
module-name = "bootstrap3"
source-exclude = [
  "**/.DS_Store",
  "docs/_build",
  "example/db.sqlite3",
  "uv.lock",
]
source-include = [
  ".editorconfig",
  ".readthedocs.yaml",
  "FUNDING.yml",
  "manage.py",
  "justfile",
  "*.md",
  "example/**",
  "tests/**",
  "tox.ini",
  "docs/**",
]

[tool.check-manifest]
ignore = ["uv.lock"]
