[metadata]
name = django-bootstrap3
version = attr: bootstrap3.__version__
description = Bootstrap 3 for Django
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/zostera/django-bootstrap3
author = Dylan Verheul
author_email = dylan@dyve.net
license = BSD-3-Clause
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Utilities

[options]
packages = find:
package_dir =
    =src
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    Django>=3.2
    beautifulsoup4>=4.8.0

[options.packages.find]
where = src
